<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CustomerRegister</class>
 <widget class="QDialog" name="CustomerRegister">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QLabel" name="label_logo">
     <property name="text">
      <string>TextLabel</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>Register:</string>
     </property>
     <layout class="QFormLayout" name="formLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="label_uname">
        <property name="text">
         <string>Username:</string>
        </property>
        <property name="buddy">
         <cstring>lineEdit_uname</cstring>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QLineEdit" name="lineEdit_uname"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_pass">
        <property name="text">
         <string>Password:</string>
        </property>
        <property name="buddy">
         <cstring>lineEdit_pass</cstring>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QLineEdit" name="lineEdit_pass">
        <property name="echoMode">
         <enum>QLineEdit::Password</enum>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_address">
        <property name="text">
         <string>Delivery Address:</string>
        </property>
        <property name="buddy">
         <cstring>lineEdit_address</cstring>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
       <widget class="QLineEdit" name="lineEdit_address"/>
      </item>
      <item row="3" column="1">
       <widget class="QPushButton" name="pushButton_register">
        <property name="text">
         <string>Register</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
